--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,9 @@
 # ignore C object files
 *.o
-# ignore compiled executable
+# ignore executables
 sabre
+sabre-dev
+metrics
 # ignore vim swap files
 *.swp
 
