simplified the versioning to be just a hash of the last commit at this stage this is more then appropriate

--- a/src/Makefile
+++ b/src/Makefile
@@ -14,7 +14,7 @@ CFLAGSDEV = -Wall -O0 -g -std=c99 -DVERSION=$(VERSIONDEV)
 
 LDFLAGS = -lz -lpthread
 GPROF = -pg
-EXE = sabre-$(GIT_VERSION)
+EXE = sabre
 
 .PHONY: default
 
